Fix overflow scroll on bio headline 🐛

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -29,7 +29,7 @@ body.page-Home {
   line-height: 1.25;
   margin: 0;
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow: hidden;
   position: absolute;
   left: -1.75vw;
   margin-top: 10rem;
